--- a/PJ19/style.css
+++ b/PJ19/style.css
@@ -8,3 +8,15 @@
 body{
     background-color: #f2f2f2;
 }
+
+.container{
+    width: 800px;
+    margin: 0 auto;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.input-container{
+    margin-bottom: 20px;
+}
