--- a/PJ19/style.css
+++ b/PJ19/style.css
@@ -1,22 +1,65 @@
+
 *{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    box-sizing: border-box;
+    font-family: sans-serif;
 }
 
 body{
-    background-color: #f2f2f2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    min-height: 100vh;
+    background: linear-gradient( to right, #2e1e4f,#47135e);
 }
 
 .container{
-    width: 800px;
-    margin: 0 auto;
-    background-color: #ffffff;
-    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0px 8px 32px 0px rgba(31, 38, 135, 0.37) ;
+    backdrop-filter: blur(4px);
     border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    transition: background 0.3s ease-in-out;
 }
 
-.input-container{
-    margin-bottom: 20px;
+.key-container{
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 20px;
+    color: #fff;
+    margin: 2.5rem;
+    min-width: 150px;
+    background: rgba(0,255,252,0.5);
+    box-shadow: 0px 8px 32px 0px rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(2.5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    transition: background 0.3s ease-in-out;
+}
+
+.key-container h4 {
+    position: absolute;
+    top: -2rem;
+    left: 0;
+    text-align: center;
+    width: 100%;
+}
+
+.key-content{
+    margin-top: 10px;
+}
+
+.container:hover{
+    background: rgba(255, 255, 255, 0.35);
+}
+
+.key-container:hover{
+    background: rgba(0, 255, 252, 0.7);
 }
