--- a/PJ20/style.css
+++ b/PJ20/style.css
@@ -1,85 +1,48 @@
+
 *{
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    padding: 0;
+    margin: 0;
 }
 
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f1f1f1;
+body{
+    background-color: yellowgreen;
 }
 
-.container {
-    width: 500px;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 10px;
+.drop{
+
+    background-color: #00FFFC;
+    height: 5rem;
+    width: 5rem;
+    border-radius: 5%;
+    border: 4px solid rgba(0, 0, 0, 0.6);
+    position: absolute;
+    animation: animate 5s linear;
+    transition: all 0.5s ease-in-out;
 }
 
-.form-group {
-    margin-bottom: 20px;
-}
+@keyframes animate {
 
-.form-group label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-    color: #333;
-    text-transform: uppercase;
-}
+    0%{
+        opacity: 1;
+        transform: scale(2);
+    }
 
-.form-group input,
-.form-group select {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-    transition: border-color 0.3s ease;
-}
+    25%{
+        border-radius: 25%;
+    }
 
-.form-group input:focus,
-.form-group select:focus {
-    border-color: #4caf50;
-}
+    50%{
+        opacity: 0.5;
+        transform: scale(3);
+        border-radius: 35%;
+        background-color: #9C00FF;
+    }
 
-.form-group .error {
-    color: #ff0000;
-    margin-top: 5px;
-    font-size: 12px;
-    display: block;
-}
-
-.submit-btn {
-    width: 100%;
-    padding: 10px 20px;
-    background-color: #4caf50;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s ease;
-}
-
-.submit-btn:hover {
-    background-color: #3e8e41;
-}
-
-.success-msg {
-    color: #4caf50;
-    font-size: 18px;
-    margin-top: 20px;
-
-    
-}
-
-.error-msg {
-    color: #ff0000;
-    font-size: 18px;
-    margin-top: 20px;
+    100%{
+        opacity: 1;
+        transform: scale(4);
+        border-radius: 50%;
+        background-color: #FFFC00;
+    }
 }
